2005-09-25  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac, src/Makefile.in: renamed i386_OBJS to x86_OBJS,
	added it to x86_64; added AC_OBJS to CLEAN_FILES in latter file

2005-09-24  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/floatmul.c: fix up and drop unneeded saturation;
	use 5 bits more precision for gain

	* configure.ac: reactivate fixed i386 floatmul

	* src/mixaudio16.c, src/mixaudio16.c: clean-up, remove old MMX
	support and mixing of dst into itself

	* src/al_buffer.h, src/al_buffer.c: void* should be ALvoid* at
	some places

2005-09-23  Sven Panne  <sven.panne@aedion.de>

	* admin/openal.spec: Added an up-to-date .spec file, based on the
	one used for SuSE 9.3.

	* openal.spec: Removed.

	* admin/openal.xpm: Added a scaled-down version of the OpenAL logo
	from http://www.openal.org/. This will be used as the icon in the
	.spec file.

	* CREDITS: Added myself.

2005-09-21  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c: Synchronized names of device structs to
	reduce #ifdefs in OpenAL headers.

	* src/al_types.h, src/alc/alc_context.c: Synchronized names of
	device structs to reduce #ifdefs in OpenAL headers.

2005-09-18  Sven Panne  <sven.panne@aedion.de>

	* src/arch/interface/interface_sound.c: Silenced warnings about
	stubbed pause/resume functionality. It is not clear if there is
	really something missing, but it was quite annoying.

	* src/al_mixer.c: When the (asynchronous) current context was set
	to NULL, the mixer thread was still in its busy wait(!) loop.
	Consequently other threads might wait forever to get the mixer
	lock and alcMakeContextCurrent might hang. We wait for 1us now in
	each mixer iteration to give other threads a chance to acquire the
	mixer lock. All the multithreading logic seems to be overly
	complicated, so it is not clear if this is really the correct way
	to fix this issue, but at least it seems to work on Linux now.

	* configure.ac: Use AL_BUILD_LIBRARY instead of _OPENAL32LIB.
